Header alignment correction

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -166,23 +166,157 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
    HEADER
    =============================== */
 
+
+.bk-header {
+    margin: 40px 0;
+    background-color: transparent;
+    border-bottom: 1px solid darken(@color-swatch2,10%);
+    padding-bottom: 33px;
+    .wrapper {
+    // Flex parent
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-direction: normal;
+    -moz-box-direction: normal;
+    -webkit-box-orient: horizontal;
+    -moz-box-orient: horizontal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-box-pack: justify;
+    -moz-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-align-content: flex-start;
+    -ms-flex-line-pack: start;
+    align-content: flex-start;
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+
+      @media @tablet {
+        display: block;
+      }
+
+    .companyheader {
+      // Flex child
+       -webkit-box-ordinal-group: 1;
+      -moz-box-ordinal-group: 1;
+      -webkit-order: 0;
+      -ms-flex-order: 0;
+      order: 0;
+      -webkit-box-flex: 0;
+      -moz-box-flex: 0;
+      -webkit-flex: 0 1 auto;
+      -ms-flex: 0 1 auto;
+      flex: 0 1 auto;
+      -webkit-align-self: auto;
+      -ms-flex-item-align: auto;
+      align-self: auto;
+
+      // Flex parent
+      display: -webkit-box;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-direction: normal;
+      -moz-box-direction: normal;
+      -webkit-box-orient: horizontal;
+      -moz-box-orient: horizontal;
+      -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+      flex-direction: row;
+      -webkit-flex-wrap: nowrap;
+      -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+      -webkit-box-pack: justify;
+      -moz-box-pack: justify;
+      -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+      justify-content: space-between;
+      -webkit-align-content: flex-start;
+      -ms-flex-line-pack: start;
+      align-content: flex-start;
+      -webkit-box-align: center;
+      -moz-box-align: center;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      align-items: center;
+
+      @media @mobile {
+        display: block;
+      }
+      @media @tablet {
+        padding-right: 40px;
+      }
+
+      .widget.companyname {
+        // Flex child
+        -webkit-box-ordinal-group: 1;
+        -moz-box-ordinal-group: 1;
+        -webkit-order: 0;
+        -ms-flex-order: 0;
+        order: 0;
+        -webkit-box-flex: 1;
+        -moz-box-flex: 1;
+        -webkit-flex: 1 1 auto;
+        -ms-flex: 1 1 auto;
+        flex: 1 1 auto;
+        -webkit-align-self: auto;
+        -ms-flex-item-align: auto;
+        align-self: auto;
+      }
+    }
+    .extendednavigation {
+      // Flex child
+      -webkit-box-ordinal-group: 1;
+      -moz-box-ordinal-group: 1;
+      -webkit-order: 0;
+      -ms-flex-order: 0;
+      order: 0;
+      -webkit-box-flex: 1;
+      -moz-box-flex: 1;
+      -webkit-flex: 1 1 auto;
+      -ms-flex: 1 1 auto;
+      flex: 1 1 auto;
+      -webkit-align-self: auto;
+      -ms-flex-item-align: auto;
+      align-self: auto;
+    }
+  }
+}
+
+
+
+
+
+
+
+
 header {
     margin: 40px 0;
     background-color: @color-swatch1;
 }
 
-.companyheader {
-    display: block;
-    float: left;
-    padding: 0;
-    width: 25%;
-}
+
+
+
 
 /* COMPANY NAME */
 
 .widget.companyname {
-  display: block;
-  float: left;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .companyname a:hover {
@@ -196,16 +330,19 @@ header {
   line-height:@font-swatch10-line-height;
   letter-spacing: @font-swatch10-letter-spacing;
   font-size: @font-swatch10-font-size;
-  padding: 10px 8px 8px;
+  padding: 10px 8px 8px 0;
 }
 
 /* LOGO */
 
 .widget.logo {
-  display: block;
-  margin-right: 2px;
-  float: left;
-  padding-top: 6px;
+  display: inline-block;
+  margin-right: 10px;
+  vertical-align: middle;
+  min-width: 22px;
+  .logo, img {
+    line-height: 0;
+  }
 }
 
 /* ===============================
